--- a/employees.html
+++ b/employees.html
@@ -6,6 +6,19 @@
     <script src="js/employee-management.js"></script>
 </head>
 <body>
+   <h1>The Employee Management System v2.0 </h1>
+    <form method="get" id="employeeForm">
+        <strong>Name</strong>
+        <input type="text" id="name"><span id="nameREQ"></span><br><br>
+        <strong>Title</strong>
+        <input type="text" id="title"><span id="titleREQ"></span><br><br>
+        <strong>Extention</strong> 
+        <input type="text" id="extention"><span id="extentionREQ"></span><br><br>
+        <input type="button" id="btnRegister" value="Register">
+    </form>
+    <h3>Employees List:</h3>
+    <table id="employeesTable">
+</table>
     
 </body>
 </html>
